--- a/styles/main.css
+++ b/styles/main.css
@@ -60,6 +60,7 @@ html {
   /* #5 */
   .links-container .navbar-link:hover{
     color: rgb(233, 50, 117);
+    background-color: white;
   }
 
  .container {
